# mccain-capital-repo

./: .dockerignore  .gitignore  Containerfile  README.md  app.py  migrate.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  monitoring.yml
docs/: ARCHITECTURE.md  DB_ARCHITECTURE.md  app_core_decomposition_plan.md
docs/indicators/: fitz-22-rev-indicator.txt  fitz-22-rev-magnitude-stats.txt  fitz-fvg-indicator.txt
mccain_capital/: __init__.py  app_core.py  auth.py  cli.py  config.py  legacy_app.py  runtime.py  wsgi.py
mccain_capital/handlers/: __init__.py  books.py  core.py  journal.py  strategies.py  trades.py
mccain_capital/migrations/: __init__.py
mccain_capital/repositories/: __init__.py  analytics.py  books.py  (+4 more)
scripts/: capture_portfolio_screenshots.py  refresh_readme_screenshots.sh
services/: podman-compose.tailscale.yml
tests/: conftest.py  test_analytics_repo.py  test_app_core.py  test_auth_gate.py  test_auth_scope_calendar_e2e.py  test_gamma_map_service.py  test_goals_payout_forecast.py  test_journal_phase2.py  test_migrations.py  test_options_panel_service.py  test_trades_feature_upgrades.py  test_trades_importing.py  test_viewmodels.py  visual_smoke.py
uploads/: 2232Account_Statement_for_default_OEV0033157.html  Account_Statement_for_default_OEV0033157.html  DONEAccount_Statement_for_default_OEV0033157.html  DONNEAccount_Statement_for_default_OEV0033157.html  FINALAccount_Statement_for_default_OEV0033157.html  REALLDONE.html  STOPPPP.html  STOP_TRADING.html  TASAAccount_Statement_for_default_OEV0033157.html
(+69 files in other folders)
