[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mccain-capital"
version = "0.1.0"
description = "McCain Capital trading journal Flask app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask==3.0.3",
  "gunicorn==22.0.0",
  "pdfplumber==0.11.4",
  "pdf2image==1.17.0",
  "pytesseract==0.3.13",
  "Pillow==10.4.0",
  "pandas",
  "lxml",
]

[project.scripts]
mccain-capital = "mccain_capital.cli:main"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
include = ["mccain_capital*"]
